--- a/Smiles/02/_tmp/slotDinamico_slot.html
+++ b/Smiles/02/_tmp/slotDinamico_slot.html
@@ -3,13 +3,11 @@
                                         <table cellpadding="0" cellspacing="0" border="0" width="573">
                                           <tr>
                                             <td>
-                                              <table width="573" cellpadding="0" cellspacing="0" border="0"  bgcolor="#ffffff">
-                                                <tr>
-                                                  <td width="30">&nbsp;</td>
-                                                  <td style="font-family: Arial, Tahoma, Helvetica, sans-serif; color: #555555; font-size: 14px; font-weight: bold; letter-spacing: 1px;" align="center" width="513">
+                                              <table width="573" cellpadding="0" cellspacing="0" border="0" bgcolor="#ffffff">
+                                                <tr>                                                  
+                                                  <td style="font-family: Arial, Tahoma, Helvetica, sans-serif; color: #555555; font-size: 14px; font-weight: bold; letter-spacing: 1px;" align="center" width="573">
                                                     T&iacute;tulo do Slot Mariana
-                                                  </td>
-                                                  <td width="30">&nbsp;
+                                                  </td>                                                  
                                                   </td>
                                                 </tr>
                                               </table>
@@ -24,7 +22,7 @@
                                                 <tr>
                                                   <td width="30">&nbsp;</td>
                                                   <td width="513" height="169">                                                    
-                                                    <img src="https://www.smiles.com.br/emails/20150728/05/imgs/imagem.jpg" width="513" height="169" alt="SLOT ALT" border="0" style="display:block; color: #010101; font-family: Arial, Tahoma, Helvetica, sans-serif;font-size: 14px;">
+                                                    <img src="https://www.smiles.com.br/emails/20150728/05/imgs/imagem.jpg" width="513" height="169" alt="{{ alt }}" border="0" style="display:block; color: #010101; font-family: Arial, Tahoma, Helvetica, sans-serif;font-size: 14px;">
                                                   </td>
                                                   <td width="30">&nbsp;</td>
                                                 </tr>
