--- a/Smiles/02/disparo.html
+++ b/Smiles/02/disparo.html
@@ -154,29 +154,41 @@
                                   CONTENT_REGION_|SLOT_CONFIRA|
                                 </td>
                               </tr><tr>
-                                       <td valign="top">
-                                          <a href="http://www.globo.com" target="_blank" Rilt="rilt_do_banner">
-                                             <img src="https://www.smiles.com.br/emails/20150728/05/imgs/banner.jpg" width="573" height="300" alt="alt do banner" border="0" style="display:block;">
-                                          </a>
-                                       </td>
+                                      <td>
+                                        <table cellpadding="0" cellspacing="0" border="0" width="573"> 
+                                          <tr>
+                                            <td>    
+                                              <table width="573" cellpadding="0" cellspacing="0" border="0">
+                                                <tr>                                                  
+                                                  <td width="573" height="300">                                                    
+                                                    <a href="http://www.globo.com" target="_blank" Rilt="">
+    			                                        <img src="https://www.smiles.com.br/emails/20150728/05/imgs/banner.jpg" width="573" height="300" alt="alt do banner" border="0" style="display:block;">
+    			                                    </a>
+                                                  </td>                                                  
+                                                </tr>
+                                              </table>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
                                     </tr><tr>
                               	<td width="573" height="20" style="font-size: 0px; line-height:20px;">&nbsp;</td>
                               </tr><tr>
                                        <td width="573" align="left" valign="top">
-                                          <table width="573" cellpadding="0" cellspacing="0" border="0"  bgcolor="#ffffff">
+                                          <table width="573" cellpadding="0" cellspacing="0" border="0" bgcolor="{{ background-color }}">
                                              <tr>
                                                 <td width="30" style="font-size: 0px;">&nbsp;</td>
-                                                <td width="513" align="left" valign="top">
-                                                   <table>
+                                                <td width="96" align="left" valign="top">
+                                                   <table cellpadding="0" cellspacing="0" border="0">
                                                       <tr>
-                                                         <td width="407" style="font-family: Arial, Tahoma, Helvetica, sans-serif; color: #5c5c5c; font-size: 14px; mso-line-height-rule: exactly; line-height: 20px;">
+                                                         <td width="407" style="font-family: Arial, Tahoma, Helvetica, sans-serif; color: {{ text-color }}; font-size: 14px; mso-line-height-rule: exactly; line-height: 20px;">
                                                             <span style="font-size: 14px; line-height: 20px;">
                                                                Olá $cond(eq(1, empty(lookup(PRI_NOME))), nothing(), firstname(lookup(PRI_NOME)))$, chegou mais uma promo&ccedil;&atilde;o especial para os clientes Diners Club: 30% de milhas b&ocirc;nus ao transferir a partir de 20.000 pontos do cart&atilde;o de cr&eacute;dito Diners Club ou Diners Club Exclusive para sua conta Smiles entre 1 e 31 de agosto de 2015 $cond(eq(1, empty(lookup(PRI_NOME))), nothing(), firstname(lookup(PRI_NOME)))$. Com privil&eacute;gios assim, sua conta continua sorrindo.
                                                             </span>
                                                          </td>
                                                          <td width="10" style="font-size: 0px;">&nbsp;</td>
                                                          <td width="96">
-                                                            <img src="https://www.smiles.com.br/emails/20150728/05/imgs/citi.jpg" width="96" height="44" alt="Citi Logo" border="0" style="display:block;">
+                                                            <img src="https://www.smiles.com.br/emails/20150728/05/imgs/citi.jpg" width="96" height="44" alt="{{ alt }}" border="0" style="display:block;">
                                                          </td>
                                                       </tr>
                                                    </table>
@@ -187,21 +199,37 @@
                                        </td>
                                     </tr><tr>
                               	<td width="573" height="20" style="font-size: 0px; line-height:20px;">&nbsp;</td>
+                              </tr>
+                              <tr>
+                                       <td valign="top">
+                                          <img src="https://www.smiles.com.br/emails/20150717/06/imgs/hr_solido.jpg" width="573" height="7" alt="." border="0" style="display:block;">
+                                       </td>
+                                    </tr>
+                                   	<tr>
+                              	<td width="573" height="20" style="font-size: 0px; line-height:20px;">&nbsp;</td>
                               </tr><tr>
                                 <td width="573" align="center">                                  
                                   CONTENT_REGION_|SLOT_DINAMICO|
                                 </td>
                               </tr><tr>
                               	<td width="573" height="20" style="font-size: 0px; line-height:20px;">&nbsp;</td>
+                              </tr>
+                              <tr>
+                                       <td valign="top">
+                                          <img src="https://www.smiles.com.br/emails/20150717/06/imgs/hr_solido.jpg" width="573" height="7" alt="." border="0" style="display:block;">
+                                       </td>
+                                    </tr>
+                                   	<tr>
+                              	<td width="573" height="20" style="font-size: 0px; line-height:20px;">&nbsp;</td>
                               </tr><tr>
                                        <td width="573" align="left" valign="top">
-                                          <table width="573" cellpadding="0" cellspacing="0" border="0"  bgcolor="#ffffff">
+                                          <table width="573" cellpadding="0" cellspacing="0" border="0"  bgcolor="{{ background-color }}">
                                              <tr>
                                                 <td width="30" style="font-size: 0px;">&nbsp;</td>
-                                                <td width="513" align="left" valign="top">
+                                                <td width="{{ text-width }}" align="left" valign="top">
                                                    <table>
                                                       <tr>
-                                                         <td width="513" style="font-family: Arial, Tahoma, Helvetica, sans-serif; color: #5c5c5c; font-size: 14px; mso-line-height-rule: exactly; line-height: 20px;">
+                                                         <td width="{{ text-width }}" style="font-family: Arial, Tahoma, Helvetica, sans-serif; color: {{ text-color }}; font-size: 14px; mso-line-height-rule: exactly; line-height: 20px;">
                                                             <span style="font-size: 14px; line-height: 20px;">
                                                                Chegou mais uma promo&ccedil;&atilde;o especial para os clientes Diners Club: 30% de milhas b&ocirc;nus ao transferir a partir de 20.000 pontos do cart&atilde;o de cr&eacute;dito Diners Club ou Diners Club Exclusive para sua conta Smiles entre 1 e 31 de agosto de 2015. Com privil&eacute;gios assim, sua conta continua sorrindo.
                                                             </span>
@@ -290,6 +318,10 @@
                                              <tr>
                                 <td align="left" valign="middle" style="font-family: Arial, Tahoma, Helvetica, sans-serif; color: #7c7c7c; font-size: 10px; mso-line-height-rule: exactly; line-height:1.2;" width="573">
                                   TJ
+                                </td>
+                              </tr><tr>
+                                <td align="left" valign="middle" style="font-family: Arial, Tahoma, Helvetica, sans-serif; color: #7c7c7c; font-size: 10px; mso-line-height-rule: exactly; line-height:1.2;" width="573">
+                                  kasdhajsdkajs
                                 </td>
                               </tr>
                                              <tr>
